kubernetes/mongo-express-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress-deployment
  labels:
    app: mongoexpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexpress
  template:
    metadata:
      labels:
         app: mongoexpress
    spec:
      containers:
      - name: mongoexpress
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-service
spec:
  selector:
    app: mongoexpress # Matches the Deployment's label
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081        # External port
      targetPort: 8081  # Container port
      nodePort: 30000   # Optional, can be omitted
